--- a/src/components/TripMaker/TripMaker.module.css
+++ b/src/components/TripMaker/TripMaker.module.css
@@ -15,3 +15,10 @@
 .button_info:hover {
   background-color: yellow;
 }
+
+.promo {
+  text-align: center;
+  margin-top: 10px;
+  font-weight: bold;
+  font-size: 18px;
+}
